--- a/GeoJson kommuner.ipynb
+++ b/GeoJson kommuner.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c2fc6cd4",
+   "id": "20169039",
    "metadata": {},
    "source": [
     "## Test kommuner Geojson  med styre\n",
+    "* denna [notebook](https://github.com/salgo60/open-data-examples/blob/master/GeoJson%20kommuner.ipynb)\n",
+    "\n",
     "* GIST med var datat finns - [Valresultat kommuner](https://gist.github.com/salgo60/6078c98809a06f5b1fd665990398e9f8)\n",
     "\n",
     "  * [CSV styre](https://gist.githubusercontent.com/salgo60/21860059ae3da3dbf26016b4ec34565b/raw/1f10ad71eb3e2c3e5427054a80915c56c5618e7e/kommunval.csv) \n",
-    "  * [GeoJson kommuner](https://gist.github.com/salgo60/509cdecf107dfb2cf0ca820082b2e101) - [raw](https://gist.githubusercontent.com/salgo60/509cdecf107dfb2cf0ca820082b2e101/raw/c53fed3fc5373a96147375765690636970a2f9be/Kommuner%2520Sverige.json)"
+    "  * [GeoJson kommuner](https://gist.github.com/salgo60/509cdecf107dfb2cf0ca820082b2e101) - [raw](https://gist.githubusercontent.com/salgo60/509cdecf107dfb2cf0ca820082b2e101/raw/c53fed3fc5373a96147375765690636970a2f9be/Kommuner%2520Sverige.json)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0d479f06",
+   "id": "2a697fb5",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bf820e56",
+   "id": "17e4b593",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8e0f0557",
+   "id": "196567e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9089a49d",
+   "id": "84a91cbd",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "52aa7265",
+   "id": "2088c886",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e38a4ffe",
+   "id": "e3221e66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1c0dfe65",
+   "id": "703576d5",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "039e7624",
+   "id": "eb0f07f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "437c4a4e",
+   "id": "f8ee11d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "934de698",
+   "id": "5e8b5062",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5f0959e1",
+   "id": "54312a5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "610fbf08",
+   "id": "e083d315",
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "93d873a2",
+   "id": "4f03f91a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c0a091b9",
+   "id": "d3273903",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f18e578",
+   "id": "aa92915b",
    "metadata": {},
    "outputs": [],
    "source": []
