--- a/GeoJson kommuner.ipynb
+++ b/GeoJson kommuner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "20169039",
+   "id": "1a69c0b8",
    "metadata": {},
    "source": [
     "## Test kommuner Geojson  med styre\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a697fb5",
+   "id": "09366a1f",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "17e4b593",
+   "id": "03595b32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "196567e0",
+   "id": "969a6e19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "84a91cbd",
+   "id": "796fbf85",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2088c886",
+   "id": "beaea1d8",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e3221e66",
+   "id": "194e08e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "703576d5",
+   "id": "77bb903d",
    "metadata": {},
    "outputs": [
     {
@@ -461,11 +461,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "eb0f07f0",
+   "execution_count": 16,
+   "id": "2be06654",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Diff storlek?!?!?!\n",
     "#dfstyre # 290\n",
     "#dfgeo # 295 \n"
    ]
@@ -473,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f8ee11d1",
+   "id": "30ce4081",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5e8b5062",
+   "id": "127e645d",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "54312a5f",
+   "id": "a337d2d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e083d315",
+   "id": "e2c929d8",
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4f03f91a",
+   "id": "cf8e03ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d3273903",
+   "id": "cca15b98",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa92915b",
+   "id": "19f3ebb2",
    "metadata": {},
    "outputs": [],
    "source": []
