--- a/GeoJson kommuner.ipynb
+++ b/GeoJson kommuner.ipynb
@@ -2,11 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1a69c0b8",
+   "id": "b3c3551d",
    "metadata": {},
    "source": [
     "## Test kommuner Geojson  med styre\n",
     "* denna [notebook](https://github.com/salgo60/open-data-examples/blob/master/GeoJson%20kommuner.ipynb)\n",
+    "  * gist med kombinerad [geojson](https://gist.github.com/salgo60/997142eafad5a1bf01deae91214d8ba1) \n",
+    "B = Borgerlig\n",
+    "V = Vänster\n",
+    "BL = Blandat\n",
+    "Ö = Övrigt\n",
+    "\n",
+    "![](https://user-images.githubusercontent.com/14206509/151426953-a1c8997c-4651-4b80-ab7d-a2ad4793ddae.png)\n",
     "\n",
     "* GIST med var datat finns - [Valresultat kommuner](https://gist.github.com/salgo60/6078c98809a06f5b1fd665990398e9f8)\n",
     "\n",
@@ -17,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "09366a1f",
+   "id": "176cb762",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "03595b32",
+   "id": "836e6c05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "969a6e19",
+   "id": "e3df7123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "796fbf85",
+   "id": "aa8020c7",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "beaea1d8",
+   "id": "f6509bef",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "194e08e2",
+   "id": "1cc8666d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "77bb903d",
+   "id": "ec317f45",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2be06654",
+   "id": "5093ed83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "30ce4081",
+   "id": "c71fd8ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "127e645d",
+   "id": "89f9ab96",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a337d2d3",
+   "id": "a674b7cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e2c929d8",
+   "id": "09611e43",
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cf8e03ef",
+   "id": "98d56c6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cca15b98",
+   "id": "c115b05b",
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19f3ebb2",
+   "id": "75419eea",
    "metadata": {},
    "outputs": [],
    "source": []
