--- a/GeoJson kommuner.ipynb
+++ b/GeoJson kommuner.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b3c3551d",
+   "id": "a5cb2682",
    "metadata": {},
    "source": [
     "## Test kommuner Geojson  med styre\n",
     "* denna [notebook](https://github.com/salgo60/open-data-examples/blob/master/GeoJson%20kommuner.ipynb)\n",
-    "  * gist med kombinerad [geojson](https://gist.github.com/salgo60/997142eafad5a1bf01deae91214d8ba1) \n",
+    "  * [gist med kombinerad geojson](https://gist.github.com/salgo60/997142eafad5a1bf01deae91214d8ba1) \n",
     "B = Borgerlig\n",
     "V = Vänster\n",
     "BL = Blandat\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "176cb762",
+   "id": "2e2a6573",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "836e6c05",
+   "id": "b67076d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e3df7123",
+   "id": "43172e55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aa8020c7",
+   "id": "b6d4e7c6",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f6509bef",
+   "id": "48383896",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1cc8666d",
+   "id": "b26be17c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ec317f45",
+   "id": "48f9fa67",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5093ed83",
+   "id": "881bc977",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c71fd8ad",
+   "id": "d2558796",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "89f9ab96",
+   "id": "1aa7d68a",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a674b7cd",
+   "id": "4bbe1927",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "09611e43",
+   "id": "507f2971",
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "98d56c6f",
+   "id": "8f040b81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c115b05b",
+   "id": "80c66e13",
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75419eea",
+   "id": "158ef81a",
    "metadata": {},
    "outputs": [],
    "source": []
