--- a/GeoJson kommuner.ipynb
+++ b/GeoJson kommuner.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "## Test kommuner Geojson  med styre\n",
+    "* [tweet](https://twitter.com/Landgren/status/1486740776826585088?s=20&t=K5KALeO2sTktDmGiJ1GwoA) vill vi ha en karta med kommuner....\n",
     "* denna [notebook](https://github.com/salgo60/open-data-examples/blob/master/GeoJson%20kommuner.ipynb)\n",
     "  * [gist med kombinerad geojson](https://gist.github.com/salgo60/997142eafad5a1bf01deae91214d8ba1) \n",
     "B = Borgerlig\n",
@@ -328,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9370a6a",
+   "id": "2f2ed2b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -477,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b9464f3d",
+   "id": "b6e3bb0d",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fa855a87",
+   "id": "f325f8f1",
    "metadata": {},
    "outputs": [
     {
