--- a/GeoJson kommuner.ipynb
+++ b/GeoJson kommuner.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "## Test kommuner Geojson  med styre\n",
     "* [tweet](https://twitter.com/Landgren/status/1486740776826585088?s=20&t=K5KALeO2sTktDmGiJ1GwoA) vill vi ha en karta med kommuner....\n",
+    "  *  user story2 \"_Politisk majoritet i varje kommun, kan man lägga till det fältet i municipality?_\"\n",
+    "\n",
     "* denna [notebook](https://github.com/salgo60/open-data-examples/blob/master/GeoJson%20kommuner.ipynb)\n",
     "  * [gist med kombinerad geojson](https://gist.github.com/salgo60/997142eafad5a1bf01deae91214d8ba1) \n",
     "B = Borgerlig\n",
@@ -329,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f2ed2b7",
+   "id": "40897c01",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -478,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b6e3bb0d",
+   "id": "d4ff26ad",
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f325f8f1",
+   "id": "859db92d",
    "metadata": {},
    "outputs": [
     {
