--- a/GeoJson kommuner.ipynb
+++ b/GeoJson kommuner.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "d4ff26ad",
    "metadata": {},
    "outputs": [
@@ -494,13 +494,14 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfstyre.value_counts(\"Styre\")"
+    "dfstyre.value_counts(\"Styre\")\n",
+    "# B = Borgerlig V = Vänster BL = Blandat Ö = Övrigt"
    ]
   },
   {
