--- a/GeoJson kommuner.ipynb
+++ b/GeoJson kommuner.ipynb
@@ -10,7 +10,7 @@
     "  *  user story2 \"_Politisk majoritet i varje kommun, kan man lägga till det fältet i municipality?_\"\n",
     "\n",
     "* denna [notebook](https://github.com/salgo60/open-data-examples/blob/master/GeoJson%20kommuner.ipynb)\n",
-    "  * [gist med kombinerad geojson](https://gist.github.com/salgo60/997142eafad5a1bf01deae91214d8ba1) \n",
+    "  * [gist kombinerad med vem som styr i geojson](https://gist.github.com/salgo60/997142eafad5a1bf01deae91214d8ba1) \n",
     "B = Borgerlig\n",
     "V = Vänster\n",
     "BL = Blandat\n",
