--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -2,18 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4c6ba8c6",
+   "id": "28f1d0ed",
    "metadata": {},
    "source": [
     "Enl. [dataportal.ses identifierare ifrån RDF](https://community.dataportal.se/topic/368/dataportal-ses-identifierare-ifr%C3%A5n-rdf)\n",
     "* finns ett API för [skolmat.se](https://skolmaten.se/) på [skolmaten.se/about/api/](https://skolmaten.se/about/api)\n",
-    "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n"
+    "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
+    " \n",
+    " \n",
+    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb)\n",
+    " \n",
+    "* dataportalen \"[Skolmaten i Lund](https://www.dataportal.se/datasets/233_9780/skolmaten-i-lunds-kommun#ref=?p=1&q=skolmat%20Lund&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false)\"\n",
+    "* data.europa.eu \"[School meals in the City of Lund](https://data.europa.eu/data/datasets/https-katalog-lund-se-store-1-resource-9?locale=en)\n",
+    "  * datasettet har kategorierna:\n",
+    "     * [Skolmat](https://data.europa.eu/data/datasets?keywords=skolmat&locale=en) --> 4 datasets\n",
+    "     * [School meal](https://data.europa.eu/data/datasets?keywords=school-meals&locale=en) --> 1 dataset\n",
+    "     * [City of Lund](https://data.europa.eu/data/datasets?keywords=city-of-lund&locale=en) --> 7 datasets"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a3d1ab5a",
+   "id": "97dfdfa0",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "511b98a8",
+   "id": "40c78826",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fe8ad806",
+   "id": "abb96672",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f53c70ca",
+   "id": "c56f961e",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a5d3b63a",
+   "id": "e990b2a4",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9c358076",
+   "id": "6bc83ecb",
    "metadata": {},
    "outputs": [
     {
@@ -644,8 +654,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "910089f3",
+   "execution_count": 8,
+   "id": "271cdcef",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +671,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee1a8836",
+   "id": "7d544316",
    "metadata": {},
    "outputs": [],
    "source": []
