--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "28f1d0ed",
+   "id": "993d04ac",
    "metadata": {},
    "source": [
     "Enl. [dataportal.ses identifierare ifrån RDF](https://community.dataportal.se/topic/368/dataportal-ses-identifierare-ifr%C3%A5n-rdf)\n",
@@ -17,13 +17,19 @@
     "  * datasettet har kategorierna:\n",
     "     * [Skolmat](https://data.europa.eu/data/datasets?keywords=skolmat&locale=en) --> 4 datasets\n",
     "     * [School meal](https://data.europa.eu/data/datasets?keywords=school-meals&locale=en) --> 1 dataset\n",
-    "     * [City of Lund](https://data.europa.eu/data/datasets?keywords=city-of-lund&locale=en) --> 7 datasets"
+    "     * [City of Lund](https://data.europa.eu/data/datasets?keywords=city-of-lund&locale=en) --> 7 datasets\n",
+    "  * dataset \"[School food menus for Ale municipality schools](https://data.europa.eu/data/datasets/https-catalog-ale-se-store-1-resource-55?locale=en)\" saknar kategorier och är maskinöversatt...\n",
+    "  * dataset \"[School restaurant menu for the municipality of Mariestad](https://data.europa.eu/data/datasets/https-catalog-mariestad-se-store-1-resource-15?locale=en)\" pekar på samma API men saknar kategorier\n",
+    "\n",
+    "  * dataset \"[Skolmaten på Lidingö](https://data.europa.eu/data/datasets/https-lidingo-entryscape-net-store-1-resource-72?locale=en)\" finns bara med svenskt namn och har bara kategorin \"[lidingo-city-in-sweden](https://data.europa.eu/data/datasets?keywords=lidingo-city-in-sweden&locale=en)\"\n",
+    "  * dataset \"[School meals in Skövde municipality](https://data.europa.eu/data/datasets/https-skovde-entryscape-net-store-1-resource-10?locale=en) pekar på samma API men skrivit ihop kategorierna\n",
+    "  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "97dfdfa0",
+   "id": "7e8fb1ae",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "40c78826",
+   "id": "15283d71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "abb96672",
+   "id": "80090881",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c56f961e",
+   "id": "ecad1d95",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e990b2a4",
+   "id": "64adea49",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6bc83ecb",
+   "id": "e66d9028",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "271cdcef",
+   "id": "04a80686",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d544316",
+   "id": "22d46f5c",
    "metadata": {},
    "outputs": [],
    "source": []
