--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -10,33 +10,47 @@
     "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
     " \n",
     " \n",
-    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb)\n",
+    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.0\n",
     " \n",
-    "* dataportalen \"[Skolmaten i Lund](https://www.dataportal.se/datasets/233_9780/skolmaten-i-lunds-kommun#ref=?p=1&q=skolmat%20Lund&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false)\"\n",
-    "* data.europa.eu \"[School meals in the City of Lund](https://data.europa.eu/data/datasets/https-katalog-lund-se-store-1-resource-9?locale=en)\n",
-    "  * datasettet har kategorierna:\n",
-    "     * [Skolmat](https://data.europa.eu/data/datasets?keywords=skolmat&locale=en) --> 4 datasets\n",
-    "     * [School meal](https://data.europa.eu/data/datasets?keywords=school-meals&locale=en) --> 1 dataset\n",
-    "     * [City of Lund](https://data.europa.eu/data/datasets?keywords=city-of-lund&locale=en) --> 7 datasets\n",
-    "  * dataset \"[School food menus for Ale municipality schools](https://data.europa.eu/data/datasets/https-catalog-ale-se-store-1-resource-55?locale=en)\" saknar kategorier och är maskinöversatt...\n",
-    "  * dataset \"[School restaurant menu for the municipality of Mariestad](https://data.europa.eu/data/datasets/https-catalog-mariestad-se-store-1-resource-15?locale=en)\" pekar på samma API men saknar kategorier\n",
-    "\n",
-    "  * dataset \"[Skolmaten på Lidingö](https://data.europa.eu/data/datasets/https-lidingo-entryscape-net-store-1-resource-72?locale=en)\" finns bara med svenskt namn och har bara kategorin \"[lidingo-city-in-sweden](https://data.europa.eu/data/datasets?keywords=lidingo-city-in-sweden&locale=en)\"\n",
-    "  * dataset \"[School meals in Skövde municipality](https://data.europa.eu/data/datasets/https-skovde-entryscape-net-store-1-resource-10?locale=en) pekar på samma API men skrivit ihop kategorierna\n",
-    "  "
+    " \n",
+    "### Massa poster som pekar på ett API \n",
+    "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på portalen och alla verkar peka på samma API för skolmat.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bär peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras...\n",
+    "* dataportalen \"[Skolmaten i Lund](https://www.dataportal.se/datasets/233_9780/skolmaten-i-lunds-kommun#ref=?p=1&q=skolmat%20Lund&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false)\" -> metadata **[233_9780](https://admin.dataportal.se/store/233/metadata/9780?recursive=dcat)**\n",
+    "  * data.europa.eu \"[School meals in the City of Lund](https://data.europa.eu/data/datasets/https-katalog-lund-se-store-1-resource-9?locale=en)\n",
+    "    * datasettet har kategorierna:\n",
+    "       * [Skolmat](https://data.europa.eu/data/datasets?keywords=skolmat&locale=en) --> 4 datasets\n",
+    "       * [School meal](https://data.europa.eu/data/datasets?keywords=school-meals&locale=en) --> 1 dataset\n",
+    "       * [City of Lund](https://data.europa.eu/data/datasets?keywords=city-of-lund&locale=en) --> 7 datasets\n",
+    "* dataportalen \"[Skolmatsmenyer för Ale kommuns skolor](https://www.dataportal.se/datasets/446_2244)\" -> metadata **[446_2244](https://admin.dataportal.se/store/446/metadata/2244?recursive=dcat)**\n",
+    "  * data.europa.eu \"[School food menus for Ale municipality schools](https://data.europa.eu/data/datasets/https-catalog-ale-se-store-1-resource-55?locale=en)\" saknar kategorier och är maskinöversatt...\n",
+    "* dataportalen \"[Skolmatsmenyer för Mariestads kommuns skolor](https://www.dataportal.se/datasets/506_1661) -> metadata **[506_1661](https://admin.dataportal.se/store/506/metadata/1661?recursive=dcat)**\n",
+    "  * data.europa.eu \"[School restaurant menu for the municipality of Mariestad](https://data.europa.eu/data/datasets/https-catalog-mariestad-se-store-1-resource-15?locale=en)\" pekar på samma API men saknar kategorier finns dock engelsk metadata i svenska portalen se [506_1661](https://admin.dataportal.se/store/506/metadata/1661?recursive=dcat)\n",
+    "* dataportalen \"[Skolmaten på Lidingö](https://www.dataportal.se/datasets/238_35328)\" -> metadata **[238_35328](https://admin.dataportal.se/store/238/metadata/35328?recursive=dcat)**\n",
+    "  * data.europa.eu \"[Skolmaten på Lidingö](https://data.europa.eu/data/datasets/https-lidingo-entryscape-net-store-1-resource-72?locale=en)\" pekar på samma API men finns bara med svenskt namn och har bara kategorin \"[lidingo-city-in-sweden](https://data.europa.eu/data/datasets?keywords=lidingo-city-in-sweden&locale=en)\"\n",
+    "* dataportlen \"[Skolmat i Skövde kommun](https://www.dataportal.se/datasets/286_4451)\" -> metadata **[286_4451](https://admin.dataportal.se/store/286/metadata/4451?recursive=dcat)**\n",
+    "  * data.europa.eu \"[School meals in Skövde municipality](https://data.europa.eu/data/datasets/https-skovde-entryscape-net-store-1-resource-10?locale=en) pekar på samma API men skrivit ihop kategorierna\n",
+    "  \n",
+    "**Fundering**\n",
+    "1. enkel koppling Europeiska dataportalen till den svenska portalen finns det för samma dataset?\n",
+    "1. unikt id finns i svenska portalen men man borde ha [DOI](https://www.youtube.com/watch?v=ekn0qicVFJM) så man fattar att det är samma data i 2 olika portaler jag tog upp det 2020 men fick [ingen feedback](https://github.com/DIGGSweden/DCAT-AP-SE/issues/72#issuecomment-653731898)\n",
+    "  udda att Europeiska dataportalen har **Cite this dataset** --> Lunds kommun, ‘School meals in the City of Lund’, accessed 2022-06-10, http://data.europa.eu/88u/dataset/https-katalog-lund-se-store-1-resource-9\n",
+    "  1. borde vara samma id både i svenska som Europeiska portalen annars blir det svårt att som Google AI kallar \"[Connecting Replicas of Datasets](https://ai.googleblog.com/2018/09/building-google-dataset-search-and.html#:~:text=Connecting%20Replicas%20of%20Datasets)\"\n",
+    "1. ett API borde räcka med en post i dataportalen, nu finns 281 kommuner i detta API men bara en handfull har skapat post i portalen....\n",
+    "1. ingen styrning finns att detta enstaka API får samma kategorier i dataportalen se även [diskussion om kategorier](https://github.com/DIGGSweden/DCAT-AP-SE/issues/86) där man vill ha flera kategorier... känns som det är styrning som behövs. \n",
+    "  1. Jag skulle kalla detta kaos [#metadatadebt](https://twitter.com/salgo60/status/1237262589341687809?s=20&t=qYCj7VZ0jpQW0sYDv9gVsg)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7e8fb1ae",
+   "id": "dec87e21",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2022-06-10 00:35:09.634700\n"
+      "Last run:  2022-06-10 08:59:00.744244\n"
      ]
     }
    ],
@@ -660,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "04a80686",
    "metadata": {},
    "outputs": [
@@ -677,7 +691,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,8 +702,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "22d46f5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ended:  2022-06-10 08:59:05.502522\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:04.759080\n"
+     ]
+    }
+   ],
+   "source": [
+    "end = datetime.now()\n",
+    "print(\"Ended: \", end) \n",
+    "print('Time elapsed (hh:mm:ss.ms) {}'.format(datetime.now() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75ad18f4",
    "metadata": {},
    "outputs": [],
    "source": []
