--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -14,7 +14,7 @@
     " \n",
     " \n",
     "### Massa poster som pekar på ett API \n",
-    "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på portalen och alla verkar peka på samma API för skolmat.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bär peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras...\n",
+    "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på portalen och alla verkar peka på samma API för skolmat.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bör peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras...\n",
     "* dataportalen \"[Skolmaten i Lund](https://www.dataportal.se/datasets/233_9780/skolmaten-i-lunds-kommun#ref=?p=1&q=skolmat%20Lund&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false)\" -> metadata **[233_9780](https://admin.dataportal.se/store/233/metadata/9780?recursive=dcat)**\n",
     "  * data.europa.eu \"[School meals in the City of Lund](https://data.europa.eu/data/datasets/https-katalog-lund-se-store-1-resource-9?locale=en)\n",
     "    * datasettet har kategorierna:\n",
@@ -36,14 +36,14 @@
     "  udda att Europeiska dataportalen har **Cite this dataset** --> Lunds kommun, ‘School meals in the City of Lund’, accessed 2022-06-10, http://data.europa.eu/88u/dataset/https-katalog-lund-se-store-1-resource-9\n",
     "  1. borde vara samma id både i svenska som Europeiska portalen annars blir det svårt att som Google AI kallar \"[Connecting Replicas of Datasets](https://ai.googleblog.com/2018/09/building-google-dataset-search-and.html#:~:text=Connecting%20Replicas%20of%20Datasets)\"\n",
     "1. ett API borde räcka med en post i dataportalen, nu finns 281 kommuner i detta API men bara en handfull har skapat post i portalen....\n",
-    "1. ingen styrning finns att detta enstaka API får samma kategorier i dataportalen se även [diskussion om kategorier](https://github.com/DIGGSweden/DCAT-AP-SE/issues/86) där man vill ha flera kategorier... känns som det är styrning som behövs. \n",
-    "  1. Jag skulle kalla detta kaos [#metadatadebt](https://twitter.com/salgo60/status/1237262589341687809?s=20&t=qYCj7VZ0jpQW0sYDv9gVsg)"
+    "1. ingen styrning finns att detta enstaka API får samma kategorier i dataportalen se även [diskussion om kategorier](https://github.com/DIGGSweden/DCAT-AP-SE/issues/86) där man vill ha flera kategorier... känns som i detta exempel så är det styrning/kvalitetssäkring som saknas\n",
+    "  1. Jag skulle kalla detta kaos [#metadatadebt](https://twitter.com/salgo60/status/1237262589341687809?s=20&t=qYCj7VZ0jpQW0sYDv9gVsg) ingen är vinnare..."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dec87e21",
+   "id": "3d6fe0c0",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75ad18f4",
+   "id": "e698dbe9",
    "metadata": {},
    "outputs": [],
    "source": []
