--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -33,7 +33,7 @@
     "**Fundering**\n",
     "1. enkel koppling Europeiska dataportalen till den svenska portalen finns det för samma dataset?\n",
     "1. unikt id finns i svenska portalen men man borde ha [DOI](https://www.youtube.com/watch?v=ekn0qicVFJM) så man fattar att det är samma data i 2 olika portaler jag tog upp det 2020 men fick [ingen feedback](https://github.com/DIGGSweden/DCAT-AP-SE/issues/72#issuecomment-653731898)\n",
-    "  udda att Europeiska dataportalen har **Cite this dataset** --> Lunds kommun, ‘School meals in the City of Lund’, accessed 2022-06-10, http://data.europa.eu/88u/dataset/https-katalog-lund-se-store-1-resource-9\n",
+    "  udda att Europeiska dataportalen har **Cite this dataset** --> Lunds kommun, ‘School meals in the City of Lund’, accessed 2022-06-10, http://data.europa.eu/88u/dataset/https-katalog-lund-se-store-1-resource-9 dvs. pekar på sig själva... måste finnas något land som tänkt på detta?!?!?!\n",
     "  1. borde vara samma id både i svenska som Europeiska portalen annars blir det svårt att som Google AI kallar \"[Connecting Replicas of Datasets](https://ai.googleblog.com/2018/09/building-google-dataset-search-and.html#:~:text=Connecting%20Replicas%20of%20Datasets)\"\n",
     "1. ett API borde räcka med en post i dataportalen, nu finns 281 kommuner i detta API men bara en handfull har skapat post i portalen....\n",
     "1. ingen styrning finns att detta enstaka API får samma kategorier i dataportalen se även [diskussion om kategorier](https://github.com/DIGGSweden/DCAT-AP-SE/issues/86) där man vill ha flera kategorier... känns som i detta exempel så är det styrning/kvalitetssäkring som saknas\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3d6fe0c0",
+   "id": "0f26ba0d",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e698dbe9",
+   "id": "15bd7450",
    "metadata": {},
    "outputs": [],
    "source": []
