--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -10,11 +10,11 @@
     "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
     " \n",
     " \n",
-    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.0\n",
+    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.01\n",
     " \n",
     " \n",
     "### Massa poster som pekar på ett API \n",
-    "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på portalen och alla verkar peka på samma API för skolmat.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bör peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras...\n",
+    "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på [portalen](https://www.dataportal.se/datasets?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false) och alla verkar peka på samma API för skolmat.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bör peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras...\n",
     "* dataportalen \"[Skolmaten i Lund](https://www.dataportal.se/datasets/233_9780/skolmaten-i-lunds-kommun#ref=?p=1&q=skolmat%20Lund&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false)\" -> metadata **[233_9780](https://admin.dataportal.se/store/233/metadata/9780?recursive=dcat)**\n",
     "  * data.europa.eu \"[School meals in the City of Lund](https://data.europa.eu/data/datasets/https-katalog-lund-se-store-1-resource-9?locale=en)\n",
     "    * datasettet har kategorierna:\n",
@@ -27,23 +27,31 @@
     "  * data.europa.eu \"[School restaurant menu for the municipality of Mariestad](https://data.europa.eu/data/datasets/https-catalog-mariestad-se-store-1-resource-15?locale=en)\" pekar på samma API men saknar kategorier finns dock engelsk metadata i svenska portalen se [506_1661](https://admin.dataportal.se/store/506/metadata/1661?recursive=dcat)\n",
     "* dataportalen \"[Skolmaten på Lidingö](https://www.dataportal.se/datasets/238_35328)\" -> metadata **[238_35328](https://admin.dataportal.se/store/238/metadata/35328?recursive=dcat)**\n",
     "  * data.europa.eu \"[Skolmaten på Lidingö](https://data.europa.eu/data/datasets/https-lidingo-entryscape-net-store-1-resource-72?locale=en)\" pekar på samma API men finns bara med svenskt namn och har bara kategorin \"[lidingo-city-in-sweden](https://data.europa.eu/data/datasets?keywords=lidingo-city-in-sweden&locale=en)\"\n",
-    "* dataportlen \"[Skolmat i Skövde kommun](https://www.dataportal.se/datasets/286_4451)\" -> metadata **[286_4451](https://admin.dataportal.se/store/286/metadata/4451?recursive=dcat)**\n",
+    "* dataportalen \"[Skolmat i Skövde kommun](https://www.dataportal.se/datasets/286_4451)\" -> metadata **[286_4451](https://admin.dataportal.se/store/286/metadata/4451?recursive=dcat)**\n",
     "  * data.europa.eu \"[School meals in Skövde municipality](https://data.europa.eu/data/datasets/https-skovde-entryscape-net-store-1-resource-10?locale=en) pekar på samma API men skrivit ihop kategorierna\n",
+    "* dataportalen \"[Skolmaten - Södertälje](https://www.dataportal.se/datasets/75_1264/skolmaten#ref=?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false)\" -> metadata **[75_1264](https://admin.dataportal.se/store/75/metadata/1264?recursive=dcat)**\n",
+    "  * data.europa.eu \"[School food](https://data.europa.eu/data/datasets/https-catalog-sodertalje-se-store-1-resource-161?locale=en)\" massa kategorier \n",
+    "  \n",
+    "* dataportalen \"[Skolmat - Linköpings kommun](https://www.dataportal.se/datasets/389_1039/skolmat#ref=?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false)\" --> metadata **[389_1039](https://admin.dataportal.se/store/389/metadata/1039?recursive=dcat)**\n",
+    "  * data.europa.eu \"[Skolmat](https://data.europa.eu/data/datasets/https-linkoping-entryscape-net-store-1-resource-28?locale=en)\" verkar vara Linköpings kommun\n",
     "  \n",
     "**Fundering**\n",
     "1. enkel koppling Europeiska dataportalen till den svenska portalen finns det för samma dataset?\n",
+    "  1. borde vara i dct:identifier men den pekar även till portalen innan svenska dataportalen se Lund [233_9780](https://data.europa.eu/api/hub/repo/distributions/1d1c2a43-0099-449c-9ae5-71568a4c12b0.rdf) som i EU portalen pekar på https://katalog.lund.se/store/1/resource/11 dvs. tillbaka till Lund jmf svenska portalens metadata [233_9780](https://admin.dataportal.se/store/233/metadata/9780?recursive=dcat)\n",
+    "     1. om det är ETT API varför hitta på nya identifierare?!?!? kanske **samma som** behövs\n",
     "1. unikt id finns i svenska portalen men man borde ha [DOI](https://www.youtube.com/watch?v=ekn0qicVFJM) så man fattar att det är samma data i 2 olika portaler jag tog upp det 2020 men fick [ingen feedback](https://github.com/DIGGSweden/DCAT-AP-SE/issues/72#issuecomment-653731898)\n",
     "  udda att Europeiska dataportalen har **Cite this dataset** --> Lunds kommun, ‘School meals in the City of Lund’, accessed 2022-06-10, http://data.europa.eu/88u/dataset/https-katalog-lund-se-store-1-resource-9 dvs. pekar på sig själva... måste finnas något land som tänkt på detta?!?!?!\n",
     "  1. borde vara samma id både i svenska som Europeiska portalen annars blir det svårt att som Google AI kallar \"[Connecting Replicas of Datasets](https://ai.googleblog.com/2018/09/building-google-dataset-search-and.html#:~:text=Connecting%20Replicas%20of%20Datasets)\"\n",
     "1. ett API borde räcka med en post i dataportalen, nu finns 281 kommuner i detta API men bara en handfull har skapat post i portalen....\n",
     "1. ingen styrning finns att detta enstaka API får samma kategorier i dataportalen se även [diskussion om kategorier](https://github.com/DIGGSweden/DCAT-AP-SE/issues/86) där man vill ha flera kategorier... känns som i detta exempel så är det styrning/kvalitetssäkring som saknas\n",
-    "  1. Jag skulle kalla detta kaos [#metadatadebt](https://twitter.com/salgo60/status/1237262589341687809?s=20&t=qYCj7VZ0jpQW0sYDv9gVsg) ingen är vinnare..."
+    "  1. Jag skulle kalla detta kaos [#metadatadebt](https://twitter.com/salgo60/status/1237262589341687809?s=20&t=qYCj7VZ0jpQW0sYDv9gVsg) ingen är vinnare...\n",
+    "  1. Borde man inte i den svenska portalen kunna ange engelska kategorier så det blir rätt på EU nivå..."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0f26ba0d",
+   "id": "9b48e677",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15bd7450",
+   "id": "5d10e9a7",
    "metadata": {},
    "outputs": [],
    "source": []
