--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -14,7 +14,7 @@
     " \n",
     " \n",
     "### Massa poster som pekar på ett API \n",
-    "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på [portalen](https://www.dataportal.se/datasets?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false) och alla verkar peka på samma API för skolmat.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bör peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras...\n",
+    "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på [portalen](https://www.dataportal.se/datasets?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false) och alla verkar peka på samma API för skolmat, i de olika portalerna finns ingen konsekvent id för detta API utan varje kommun i detta API som skapar en post skapar en ny egen identifierare verkar det som.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bör peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras... där saker skall maskinöversättas, alla sätter \"egna kategorier\" känns som någon borde gå tillbaka till ritbordet...\n",
     "* dataportalen \"[Skolmaten i Lund](https://www.dataportal.se/datasets/233_9780/skolmaten-i-lunds-kommun#ref=?p=1&q=skolmat%20Lund&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false)\" -> metadata **[233_9780](https://admin.dataportal.se/store/233/metadata/9780?recursive=dcat)**\n",
     "  * data.europa.eu \"[School meals in the City of Lund](https://data.europa.eu/data/datasets/https-katalog-lund-se-store-1-resource-9?locale=en)\n",
     "    * datasettet har kategorierna:\n",
@@ -34,7 +34,8 @@
     "  \n",
     "* dataportalen \"[Skolmat - Linköpings kommun](https://www.dataportal.se/datasets/389_1039/skolmat#ref=?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false)\" --> metadata **[389_1039](https://admin.dataportal.se/store/389/metadata/1039?recursive=dcat)**\n",
     "  * data.europa.eu \"[Skolmat](https://data.europa.eu/data/datasets/https-linkoping-entryscape-net-store-1-resource-28?locale=en)\" verkar vara Linköpings kommun\n",
-    "  \n",
+    "* finns säkert fler som jag missat.... 😅\n",
+    "\n",
     "**Fundering**\n",
     "1. enkel koppling Europeiska dataportalen till den svenska portalen finns det för samma dataset?\n",
     "  1. borde vara i dct:identifier men den pekar även till portalen innan svenska dataportalen se Lund [233_9780](https://data.europa.eu/api/hub/repo/distributions/1d1c2a43-0099-449c-9ae5-71568a4c12b0.rdf) som i EU portalen pekar på https://katalog.lund.se/store/1/resource/11 dvs. tillbaka till Lund jmf svenska portalens metadata [233_9780](https://admin.dataportal.se/store/233/metadata/9780?recursive=dcat)\n",
@@ -51,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9b48e677",
+   "id": "f8525d79",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d10e9a7",
+   "id": "8939b617",
    "metadata": {},
    "outputs": [],
    "source": []
