--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -5,7 +5,7 @@
    "id": "993d04ac",
    "metadata": {},
    "source": [
-    "Enl. [dataportal.ses identifierare ifrån RDF](https://community.dataportal.se/topic/368/dataportal-ses-identifierare-ifr%C3%A5n-rdf)\n",
+    "Enl. [dataportal.se identifierare ifrån RDF](https://community.dataportal.se/topic/368/dataportal-ses-identifierare-ifr%C3%A5n-rdf)\n",
     "* finns ett API för [skolmat.se](https://skolmaten.se/) på [skolmaten.se/about/api/](https://skolmaten.se/about/api)\n",
     "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
     " \n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f8525d79",
+   "id": "7777ecf0",
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8939b617",
+   "id": "788c67a2",
    "metadata": {},
    "outputs": [],
    "source": []
